good first issue Добавлен новый плагин(вход игрока+ команда на длительность игры)

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,4 +3,6 @@ version: '${project.version}'
 main: org.joutak.joutaktemplate.JouTakTemplate
 api-version: '1.20'
 commands:
-  joutest: {}
+  playertime:
+    description: Показывает время входа и разницу
+    usage: /playertime
