Добавил команду /givepass для продления проходок

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,8 @@
 name: JouTakTemplate
-version: '${project.version}'
+version: 1.0-SNAPSHOT
 main: org.joutak.joutaktemplate.JouTakTemplate
-api-version: '1.20'
+api-version: 1.20
 commands:
-  joutest: {}
+  givepass:
+    description: Раздаёт проходки игрокам на N дней
+    usage: /givepass <days>
